--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,4 @@ Botwyn/obj/Debug/netcoreapp2.0/Botwyn.AssemblyInfo.cs
 Botwyn/obj/Botwyn.csproj.nuget.g.targets
 Botwyn/obj/Botwyn.csproj.nuget.g.props
 Botwyn/obj/Botwyn.csproj.nuget.cache
+Botwyn/Lavalink.jar
