--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,9 @@
 
-Botwyn.csproj
 application.yml
-obj/project.assets.json
-obj/Debug/netcoreapp2.0/Botwyn.pdb
-obj/Debug/netcoreapp2.0/Botwyn.dll
-obj/Debug/netcoreapp2.0/Botwyn.csprojAssemblyReference.cache
-obj/Debug/netcoreapp2.0/Botwyn.csproj.FileListAbsolute.txt
-obj/Debug/netcoreapp2.0/Botwyn.csproj.CoreCompileInputs.cache
-obj/Debug/netcoreapp2.0/Botwyn.AssemblyInfoInputs.cache
-obj/Debug/netcoreapp2.0/Botwyn.AssemblyInfo.cs
-obj/Botwyn.csproj.nuget.g.targets
-obj/Botwyn.csproj.nuget.g.props
-obj/Botwyn.csproj.nuget.cache
 *.gz
 bin/*
 obj/*
-.vs/Botwyn/DesignTimeBuild/.dtbcache
-.vs/Botwyn/v15/.suo
-.vs/Botwyn/v15/Server/sqlite3/db.lock
-.vs/Botwyn/v15/Server/sqlite3/storage.ide
-.vs/Botwyn/v15/Server/sqlite3/storage.ide-shm
-.vs/Botwyn/v15/Server/sqlite3/storage.ide-wal
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.deps.json
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.dll
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.pdb
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.runtimeconfig.dev.json
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.runtimeconfig.json
-Botwyn/bin/Debug/netcoreapp2.0/config.json
-Botwyn/bin/Debug/netcoreapp2.0/Data/UserAccounts/Accounts.json
-Botwyn/bin/Debug/netcoreapp2.0/Lavalink.jar
-Botwyn/bin/Debug/netcoreapp2.0/logs/spring.log
-Botwyn/bin/Debug/netcoreapp2.0/logs/spring.log.2018-11-05.01997659345922318.tmp
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.deps.json
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.dll
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.pdb
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.runtimeconfig.dev.json
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.runtimeconfig.json
-Botwyn/bin/Debug/netcoreapp2.1/config.json
-Botwyn/bin/Debug/netcoreapp2.1/Data/UserAccounts/Accounts.json
-Botwyn/bin/Debug/netcoreapp2.1/Lavalink.jar
-Botwyn/bin/Debug/netcoreapp2.1/logs/spring.log
-Botwyn/bin/Debug/netcoreapp2.1/logs/spring.log.2018-11-05.01997659345922318.tmp
-Botwyn/bin/Debug/netcoreapp2.1/logs/spring.log.2018-11-05.01997659345922318.tmp
-Botwyn/bin/Debug/netcoreapp2.1/logs/spring.log
-Botwyn/bin/Debug/netcoreapp2.1/Lavalink.jar
-Botwyn/bin/Debug/netcoreapp2.1/Data/UserAccounts/Accounts.json
-Botwyn/bin/Debug/netcoreapp2.1/config.json
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.runtimeconfig.json
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.runtimeconfig.dev.json
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.pdb
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.dll
-Botwyn/bin/Debug/netcoreapp2.1/Botwyn.deps.json
-Botwyn/bin/Debug/netcoreapp2.0/logs/spring.log.2018-11-05.01997659345922318.tmp
-Botwyn/bin/Debug/netcoreapp2.0/logs/spring.log
-Botwyn/bin/Debug/netcoreapp2.0/Lavalink.jar
-Botwyn/bin/Debug/netcoreapp2.0/Data/UserAccounts/Accounts.json
-Botwyn/bin/Debug/netcoreapp2.0/config.json
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.runtimeconfig.json
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.runtimeconfig.dev.json
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.pdb
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.dll
-Botwyn/bin/Debug/netcoreapp2.0/Botwyn.deps.json
-Botwyn/obj/Release/netcoreapp2.0/Botwyn.AssemblyInfo.cs
-Botwyn/obj/Release/netcoreapp2.0/Botwyn.AssemblyInfoInputs.cache
-Botwyn/obj/Release/netcoreapp2.0/Botwyn.assets.cache
-Botwyn/obj/Release/netcoreapp2.0/Botwyn.csproj.CoreCompileInputs.cache
-Botwyn/obj/Release/netcoreapp2.0/Botwyn.csprojAssemblyReference.cache
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.AssemblyInfo.cs
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.AssemblyInfoInputs.cache
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.assets.cache
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.csproj.CoreCompileInputs.cache
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.csproj.FileListAbsolute.txt
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.csprojAssemblyReference.cache
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.dll
-Botwyn/obj/Release/netcoreapp2.0/debian.9-x64/Botwyn.pdb
-Botwyn/obj/project.assets.json
-Botwyn/obj/netcoreapp2.0/debian.9-x64/host/Botwyn
-Botwyn/obj/Debug/netcoreapp2.1/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-Botwyn/obj/Debug/netcoreapp2.1/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Botwyn/obj/Debug/netcoreapp2.1/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.pdb
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.dll
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.csprojAssemblyReference.cache
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.csproj.FileListAbsolute.txt
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.csproj.CoreCompileInputs.cache
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.assets.cache
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.AssemblyInfoInputs.cache
-Botwyn/obj/Debug/netcoreapp2.1/Botwyn.AssemblyInfo.cs
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.pdb
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.dll
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.csprojAssemblyReference.cache
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.csproj.FileListAbsolute.txt
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.csproj.CoreCompileInputs.cache
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.assets.cache
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.AssemblyInfoInputs.cache
-Botwyn/obj/Debug/netcoreapp2.0/Botwyn.AssemblyInfo.cs
-Botwyn/obj/Botwyn.csproj.nuget.g.targets
-Botwyn/obj/Botwyn.csproj.nuget.g.props
-Botwyn/obj/Botwyn.csproj.nuget.cache
+.vs/*
+Botwyn/bin/*
+Botwyn/obj/*
 Botwyn/Lavalink.jar
