Added more functionality

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ Botwyn/Lavalink.jar
 .vs/Botwyn/v15/.suo
 .vs/Botwyn/v15/Server/sqlite3/storage.ide-shm
 .vs/Botwyn/v15/Server/sqlite3/storage.ide-wal
+.vs/Botwyn/DesignTimeBuild/.dtbcache
+.vs/Botwyn/v15/.suo
+.vs/Botwyn/v15/Server/sqlite3/storage.ide
+.vs/Botwyn/v15/Server/sqlite3/storage.ide-shm
+.vs/Botwyn/v15/Server/sqlite3/storage.ide-wal
+Botwyn/logs/spring.log
