--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Botwyn/Lavalink.jar
 .vs/Botwyn/v15/Server/sqlite3/storage.ide-shm
 .vs/Botwyn/v15/Server/sqlite3/storage.ide-wal
 Botwyn/logs/spring.log
+.vs/Botwyn/v15/.suo
