--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ obj/*
 Botwyn/bin/*
 Botwyn/obj/*
 Botwyn/Lavalink.jar
+Botwyn/Properties/*
 .vs/Botwyn/v15/.suo
 .vs/Botwyn/v15/Server/sqlite3/storage.ide-shm
 .vs/Botwyn/v15/Server/sqlite3/storage.ide-wal
